# CLL_MRD_growth_kinetics

./: .gitignore  Autogen .ipynb  GCLL standardized with plotly-0022-wbc.ipynb  GCLL standardized with plotly-0186- wbc_updated.ipynb  GCLL standardized with plotly.ipynb  README.md  install_package.py  model_helper.py  plotly_helper.py  pyproject.toml
CRC notebooks/: CRC_0036_updated.ipynb  CRC_0037.ipynb  CRC_model_0037_random_seed.ipynb  CRC_model_with_weight_0037.ipynb
Cell_Population/: BuildTreeEngine.py  CellPopulation.py  CellPopulationEngine.py  ClusterObject.py  Enums.py  Node.py  PatientObject.py  PhylogicNDT.py  PhylogicOutput.py  README.md  SomMutation.py  TreeObject.py  TumorSample.py
FI_notebooks/: FI standardized with plotly-01.ipynb  FI standardized with plotly-07.ipynb  FI standardized with plotly-11.ipynb  FI standardized with plotly-13.ipynb
GCLL notebook archives/: GCLL standardized with plotly-0186.ipynb  GCLL standardized with plotly-0265.ipynb  GCLL-0068.ipynb  GCLL-0186-Jan.ipynb  GCLL-0186.ipynb
GCLL notebooks/: CLL14 standardized with plotly-1063.ipynb  CLL14 standardized with plotly-1161.ipynb  CLL14 standardized with plotly-1166.ipynb  FI standardized with plotly-01.ipynb  FI standardized with plotly-07.ipynb  GCLL standardized with plotly-0022-wbc-updated.ipynb  GCLL standardized with plotly-0027-wbc-updated.ipynb  GCLL standardized with plotly-0048-wbc-updated.ipynb  GCLL standardized with plotly-0084-wbc.ipynb  GCLL standardized with plotly-0105-wbc-updated.ipynb  GCLL standardized with plotly-0106-wbc-updated.ipynb  (+16 more)
(+86 files in other folders)
