[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fludarabine"
version = "0.1.0"
description = "Helper utilities used across the Fludarabine MRD analysis notebooks."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.urls]
repository = "https://example.com/fludarabine"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["fludarabine"]
