[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clonokinetics"
version = "0.1.0"
description = "Helper utilities used across the Fludarabine MRD analysis notebooks."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3.0",
    "plotly>=5.0.0",
    "dalmatian>=0.0.1",
    "google-cloud-storage>=2.0.0",
    "matplotlib>=3.5.0",
    "networkx>=2.6.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0"
]

[project.urls]
repository = "https://example.com/fludarabine"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["clonokinetics"]
